--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "NODE_ENV=production webpack --config webpack/build.config.js --optimize-minimize",
     "build-demo": "webpack --config 'webpack/demo.config.js' --optimize-minimize --content-base demo",
     "dev": "webpack-dev-server --config 'webpack/dev.config.js' --devtool eval --progress --colors --hot --content-base demo",
-    "lint": "eslint lib",
-    "prepublish": "npm run lint && npm run build"
+    "prepublish": "npm run build"
   },
   "author": "Jonathan Rowny",
   "contributors": [
@@ -25,11 +24,8 @@
   },
   "devDependencies": {
     "babel-core": "^5.4.7",
-    "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.3",
     "babel-plugin-lodash": "^0.2.0",
-    "eslint": "^0.21.2",
-    "eslint-plugin-react": "^2.4.0",
     "lodash": "^3.10.1",
     "node-libs-browser": "^0.5.2",
     "react": "^0.14.0",
