--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "dependencies": {},
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": ">=0.14.0"
   },
   "devDependencies": {
     "babel-core": "^5.4.7",
